[package]
name = "xab-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bitflags = "2.9.4"
bytes = "1.10.1"
iced = { version = "0.13.1", features = ["image"] }
iced_aw = { version = "0.12.2", default-features = false, features = ["tab_bar", "card", "badge"] }
rfd = "0.15.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
